Fix text selection overflow

--- a/static/a/main.css
+++ b/static/a/main.css
@@ -94,14 +94,17 @@ body > nav > a#nav-current {
 }
 body > main {
   margin: auto;
+  overflow: hidden;
   width: 1000px;
 }
 body > main > article {
   margin: 0px 0px 0px 224px;
+  overflow: hidden;
   padding: 10px 8px 0px 16px;
 }
 body > main.slim > article {
   margin: 0px;
+  overflow: hidden;
 }
 body > main > article > header {
   background-color: rgba(64,64,64,0.6);
@@ -131,6 +134,12 @@ body > main > article .social-btn {
   box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
   margin: 4px 4px 4px 0px;
   padding: 6px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   vertical-align: top;
 }
 body > main > article section {
@@ -174,11 +183,13 @@ body > footer {
   color: rgba(224,224,224,0.3);
   font: 9pt source code pro, monospace;
   margin: 32px auto 10px auto;
+  overflow: hidden;
   padding: 0px 0px 0px 224px;
   text-align: center;
   width: 1000px;
 }
 body > footer.slim {
+  overflow: hidden;
   padding: 0px;
 }
 .float-left {
